# TranslateToRust

./: .gitignore  .rustify.toml  Cargo.toml  DEMO_SCRIPT.md  README.md  README_BATCH.md  SUMMARY.md  demo_setup.sh  env-example.txt  llm_config.json.example  pyproject.toml  rustify.toml
bzip2_rs/: Cargo.toml
bzip2_rs/src/: blocksort.rs  bzip2.rs  bzip2recover.rs  bzlib.rs  compress.rs  crctable.rs  decompress.rs  huffman.rs  lib.rs  mk251.rs  randtable.rs  spewG.rs
demo_project/: Makefile  README.md
demo_project/src/: compare-int.c  compare-int.h  queue.c  queue.h  slist.c  slist.h  utils.h
demo_project/test/: test-queue  test-queue.c  test-slist  test-slist.c
docs/: config_examples.md  llm_api_implementation.md  testing_guide.md
examples/: mcp_client_example.py  simple_translate.py
llm_configs/: anthropic.json.example  claude_config.json.example  google_ai_config.json.example  googleai.json.example  openai.json.example
llm_test_reports/claude-3-7-sonnet-20250219-default/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131809.csv  test_report_20250401_131809.json  test_report_20250401_131809.md
llm_test_reports/claude-3-7-sonnet-20250219-greedy/: test_report_20250326_125718.csv  test_report_20250326_125718.json  test_report_20250326_125718.md  test_report_20250401_131810.csv  test_report_20250401_131810.json  test_report_20250401_131810.md
llm_test_reports/claude-3-7-sonnet-20250219-thinking/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131810.csv  test_report_20250401_131810.json  test_report_20250401_131810.md
llm_test_reports/deepseek-r1/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131809.csv  test_report_20250401_131809.json  test_report_20250401_131809.md
llm_test_reports/deepseek-r1-distill-qwen-32b/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131809.csv  test_report_20250401_131809.json  test_report_20250401_131809.md
llm_test_reports/deepseek-v3-default/: test_report_20250326_125718.csv  test_report_20250326_125718.json  test_report_20250326_125718.md  test_report_20250401_131810.csv  test_report_20250401_131810.json  test_report_20250401_131810.md
llm_test_reports/deepseek-v3-greedy/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131809.csv  test_report_20250401_131809.json  test_report_20250401_131809.md
llm_test_reports/gemini-2.0-flash-default/: test_report_20250326_125717.csv  test_report_20250326_125717.json  test_report_20250326_125717.md  test_report_20250401_131810.csv  test_report_20250401_131810.json  test_report_20250401_131810.md
llm_test_reports/gemini-2.0-flash-greedy/: test_report_20250326_125718.csv  test_report_20250326_125718.json  test_report_20250326_125718.md  test_report_20250401_131810.csv  test_report_20250401_131810.json  test_report_20250401_131810.md
scripts/: README.md  batch_formatted.py  batch_test.py  batch_test_llm.py  batch_translate.py  batch_translate_oldversion.py  batch_transonly.py  generate_llm_reports.py  generate_test_reports.py  run_example.sh  setup_env.sh.example  setup_reports_dir.sh  timeout_handler.py
src/: llm_api.rs  main.rs  testing.rs  translation.rs  utils.rs
tests/: __init__.py  test_pipeline.py  test_templates.py
visualization_project/: README.md  requirements.txt
(+295526 files in other folders)
