[package]
name = "translate_to_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A project to evaluate LLM C/C++ to Rust translation quality"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
chrono = "0.4"
wait-timeout = "0.2"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4.0"

[features]
default = ["openai"]
openai = ["reqwest"]
anthropic = ["reqwest"]
google = ["reqwest"]

[[bin]]
name = "translate"
path = "src/main.rs" 