[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustify"
version = "0.1.0"
description = "C/C++ to Rust automatic translation tool using AI multi-agent system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rustify Team" },
]
keywords = [
    "c2rust",
    "transpiler",
    "llm",
    "multi-agent",
    "code-translation",
    "rust",
    "c",
    "cpp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    # LLM Integration
    "litellm>=1.0.0",
    "openai>=1.0.0",
    
    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
    
    # Templates
    "jinja2>=3.0.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # Graph Analysis
    "networkx>=3.0",
    
    # Optional: Tree-sitter for better parsing
    # "tree-sitter>=0.20.0",
    # "tree-sitter-c>=0.20.0",
    
    # Async Support
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

tree-sitter = [
    "tree-sitter>=0.20.0",
    "tree-sitter-c>=0.20.0",
]

clang = [
    "libclang>=16.0.0",
]

mcp = [
    "mcp>=0.1.0",
]

web = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

all = [
    "rustify[dev,tree-sitter,clang,mcp,web]",
]

[project.scripts]
rustify = "rustify.cli:main"

[project.urls]
Homepage = "https://github.com/rustify/rustify"
Documentation = "https://rustify.readthedocs.io"
Repository = "https://github.com/rustify/rustify"
Issues = "https://github.com/rustify/rustify/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rustify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
